[package]
name = "tetris-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {git="https://github.com/not-fl3/macroquad", rev="1dcc721"}

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
miniquad = {git="https://github.com/samoylovfp/miniquad", rev="4068550"}
